[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Character/dwarf1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Character/dwarf1_emote.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Scripts/AI.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dwarf1_emote:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dwarf1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dwarf1_emote:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk_Down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dwarf1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dwarf1_emote:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dwarf1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dwarf1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dwarf1_emote:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dwarf1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk_Right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dwarf1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dwarf1_emote:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dwarf1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk_Up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dwarf1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dwarf1_emote:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dwarf1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 29.2995 )

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 3.25253

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 3 )

[node name="dwarf1" type="Sprite" parent="."]
position = Vector2( 0.758, -27.343 )
texture = ExtResource( 1 )
vframes = 8
hframes = 12

[node name="dwarf1_emote" type="Sprite" parent="."]
visible = false
position = Vector2( 0.757629, -27.3434 )
texture = ExtResource( 2 )
vframes = 8
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Walk_Down = SubResource( 2 )
anims/Walk_Left = SubResource( 3 )
anims/Walk_Right = SubResource( 4 )
anims/Walk_Up = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.297333, -21.4057 )
scale = Vector2( 1.59316, 0.999208 )
shape = SubResource( 6 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PlayerDetectZone" type="Area2D" parent="AI"]
gravity_vec = Vector2( 0, 0 )

[node name="OuterDetectCircle" type="CollisionShape2D" parent="AI/PlayerDetectZone"]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 20.3973, 20.3973 )
shape = SubResource( 7 )

[node name="AttackDetectZone" type="Area2D" parent="AI"]

[node name="InnerDetectCircle" type="CollisionShape2D" parent="AI/AttackDetectZone"]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 10, 10 )
shape = SubResource( 8 )
[connection signal="state_changed" from="AI" to="." method="_on_AI_state_changed"]
[connection signal="body_entered" from="AI/PlayerDetectZone" to="AI" method="_on_PlayerDetectZone_body_entered"]
[connection signal="body_entered" from="AI/AttackDetectZone" to="AI" method="_on_AttackDetectZone_body_entered"]
